Fix: SecurityConfig 수정 (찐막)