@@ -16,34 +16,11 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
 
-/*
-@Configuration
-public class SecurityConfig {
-    @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(c -> c.disable())
-                .authorizeHttpRequests(c -> c
-                        .anyRequest().permitAll())
-                .cors(c -> c.configurationSource(request -> {
-                    CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(List.of("http://localhost:3000"));
-                    config.setAllowedMethods(List.of("*"));
-                    config.setAllowCredentials(true);
-                    config.setAllowedHeaders(List.of("*"));
-                    config.setMaxAge(3600L);
-                    return config;
-                }))
-                .headers(c -> c.frameOptions(c2 -> c2.disable()));
-        return http.build();
-    }
-}*/
+@RequiredArgsConstructor
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
 
     private final CustomOAuth2UserService customOAuth2UserService;
@@ -62,31 +39,30 @@ public class SecurityConfig {
                         CorsConfiguration configuration = new CorsConfiguration();
 
                         configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://api.yeongjin.site", "https://ddoba.vercel.app"));
-                        configuration.setAllowedMethods(List.of("*"));
+                        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Include OPTIONS method
                         configuration.setAllowCredentials(true);
                         configuration.setAllowedHeaders(List.of("*"));
                         configuration.setMaxAge(3600L);
 
-                        configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
-                        configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+                        configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization")); // Expose Set-Cookie and Authorization headers
 
                         return configuration;
                     }
                 }));
 
-        //From 로그인 방식 disable
+        // From 로그인 방식 disable
         http
                 .formLogin((auth) -> auth.disable());
 
-        //HTTP Basic 인증 방식 disable
+        // HTTP Basic 인증 방식 disable
         http
                 .httpBasic((auth) -> auth.disable());
 
-        //JWTFilter 추가
+        // JWTFilter 추가
         http
                 .addFilterAfter(new JWTFilter(jwtUtil), OAuth2LoginAuthenticationFilter.class);
 
-        //oauth2
+        // oauth2
         http
                 .oauth2Login((oauth2) -> oauth2
                         .userInfoEndpoint((userInfoEndpointConfig) -> userInfoEndpointConfig
@@ -94,12 +70,12 @@ public class SecurityConfig {
                         .successHandler(customSuccessHandler)
                 );
 
-        //경로별 인가 작업
+        // 경로별 인가 작업
         http
                 .authorizeHttpRequests((auth) -> auth
                         .anyRequest().permitAll());
 
-        //세션 설정 : STATELESS
+        // 세션 설정 : STATELESS
         http
                 .sessionManagement((session) -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS));
